--- a/roles/software/tasks/k8s.yml
+++ b/roles/software/tasks/k8s.yml
@@ -30,10 +30,22 @@
         path: /etc/apt/keyrings/kubernetes-apt-keyring.gpg
       register: kubernetes_gpg_key
 
-    - name: Download and install Kubernetes GPG key if not present
+    - name: Download Kubernetes GPG key if not present
       get_url:
         url: https://pkgs.k8s.io/core:/stable:/v1.32/deb/Release.key
-        dest: /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+        dest: /tmp/kubernetes-apt-keyring.gpg
+        mode: '0644'
+      when: not kubernetes_gpg_key.stat.exists
+
+    - name: Convert Kubernetes GPG key to dearmored format
+      command: gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg /tmp/kubernetes-apt-keyring.gpg
+      args:
+        creates: /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+      when: not kubernetes_gpg_key.stat.exists
+
+    - name: Set permissions for Kubernetes signing key
+      file:
+        path: /etc/apt/keyrings/kubernetes-apt-keyring.gpg
         mode: '0644'
       when: not kubernetes_gpg_key.stat.exists
 
@@ -51,5 +63,6 @@
       apt:
         name: kubectl
         state: present
+      become: true
 # RedHat
 
