--- a/roles/software/tasks/k8s.yml
+++ b/roles/software/tasks/k8s.yml
@@ -60,6 +60,8 @@
     - name: Update apt package index
       apt:
         update_cache: yes
+      changed_when: false
+      become: true
 
     - name: Install kubectl
       apt:
