--- a/roles/software/tasks/plantuml.yml
+++ b/roles/software/tasks/plantuml.yml
@@ -94,6 +94,7 @@
         regexp: '"markdown-preview-enhanced.plantumlJarPath":\s*".*/plantuml.jar"'
         line: '  "markdown-preview-enhanced.plantumlJarPath": "/opt/plantuml/plantuml.jar",'
         backrefs: yes
+        changed_when: false
 
     - name: Update PlantUML jar path in VS Code settings.json | Debian, RedHat
       ansible.builtin.lineinfile:
@@ -101,3 +102,4 @@
         regexp: '"plantuml.jar":\s*".*/plantuml.jar"'
         line: '  "plantuml.jar": "/opt/plantuml/plantuml.jar",'
         backrefs: yes
+        changed_when: false
