--- a/roles/software/tasks/browser.yml
+++ b/roles/software/tasks/browser.yml
@@ -29,8 +29,9 @@
 
     - name: Add Brave APT repository | Debian
       apt_repository:
-        repo: 'deb [signed-by=/etc/apt/keyrings/keyrings/brave-browser-archive-keyring.gpg] https://brave-browser-apt-release.s3.brave.com/ stable main'
+        repo: deb [arch=amd64, signed-by=/etc/apt/keyrings/keyrings/brave-browser-archive-keyring.gpg] https://brave-browser-apt-release.s3.brave.com/ stable main
         state: present
+        filename: brave-browser
       become: true
 
     - name: Install Brave Browser | Debian
