--- a/setup.yml
+++ b/setup.yml
@@ -4,7 +4,7 @@
 
   vars_prompt:
     - name: install_ssh_keys
-      prompt: 'Do you want to install SSH keys? (yes/y default: no)'
+      prompt: 'Do you want to install encrypted files (ssh, bookmarks)? (yes/y default: no)'
       private: no
 
   vars:
