--- a/roles/common/tasks/cli_tools.yml
+++ b/roles/common/tasks/cli_tools.yml
@@ -16,6 +16,16 @@
     state: present
   become: "{{ ansible_os_family != 'Darwin' }}"
 
+# macOS
+- block:
+    - name: Only | macOS
+      homebrew:
+        name:
+          - act
+        state: present
+      become: false
+  when: ansible_os_family == 'Darwin'
+
 # Ubuntu
 - block:
     - name: Install Common CLI Tools | Debian
