--- a/roles/software/tasks/mos.yml
+++ b/roles/software/tasks/mos.yml
@@ -8,5 +8,5 @@
 - name: remove warring flag
   shell:
     cmd: |
-      sudo xattr -r -d com.apple.quarantine /Applications/Mos.app
+      xattr -r -d com.apple.quarantine /Applications/Mos.app
   when: ansible_os_family == 'Darwin'
