--- a/roles/software/tasks/osx_defaults.yml
+++ b/roles/software/tasks/osx_defaults.yml
@@ -7,6 +7,74 @@
         type: bool
         value: true
 
+    - name: Require password immediately after screensaver starts
+      community.general.osx_defaults:
+        domain: com.apple.screensaver
+        key: askForPassword
+        type: int
+        value: 1
+
+    - name: Set screensaver password delay to zero
+      community.general.osx_defaults:
+        domain: com.apple.screensaver
+        key: askForPasswordDelay
+        type: int
+        value: 0
+
+    - name: Use List view by default in Finder
+      community.general.osx_defaults:
+        domain: com.apple.finder
+        key: FXPreferredViewStyle
+        type: string
+        value: Nlsv
+      register: _view_style
+
+    - name: Show Path Bar in Finder
+      community.general.osx_defaults:
+        domain: com.apple.finder
+        key: ShowPathBar
+        type: bool
+        value: true
+      register: _path_bar
+
+    - name: Don't show hard drives on desktop
+      community.general.osx_defaults:
+        domain: com.apple.finder
+        key: ShowHardDrivesOnDesktop
+        type: bool
+        value: false
+      register: _hide_drives
+    - set_fact:
+        finder_needs_restart: true
+      when: _hide_drives.changed
+
+    - name: Disable “Prompt on Close” in Terminal
+      community.general.osx_defaults:
+        domain: com.apple.Terminal
+        key: PromptOnClose
+        type: bool
+        value: false
+
+    - name: Keep Terminal window open after shell exits
+      community.general.osx_defaults:
+        domain: com.apple.Terminal
+        key: ShellExitAction
+        type: int
+        value: 1
+
+    - name: Make screensaver never start on this Mac
+      community.general.osx_defaults:
+        domain: com.apple.screensaver
+        host: "{{ ansible_facts['nodename'] }}"
+        key: idleTime
+        type: int
+        value: 0
+
+    - name: Set display sleep to 1 minute on battery
+      command: pmset -b displaysleep 1
+    - name: Set display sleep to 2 minutes on AC power
+      command: pmset -c displaysleep 2
+
     - name: Restart Finder to apply changes
       command: killall Finder
       changed_when: false
